--- a/main.css
+++ b/main.css
@@ -2,16 +2,16 @@ html {
     height: 100%;
 }
 
-body {
-    
+body { 
+    height: 100%;
+    margin: 0;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     background-image: linear-gradient(147deg, #000 0%, #141E30 74%);
 
     display: flex;
     justify-content: center;
-
 }
-
-
 
 @font-face {
     font-family: 'productSans';
