--- a/main.css
+++ b/main.css
@@ -71,3 +71,17 @@ p{
 .ring{
     visibility: hidden;
 }
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: red;
+    color: white;
+    text-align: center;
+  }
+
+  /* #plutoLegend:hover{
+      .ring
+  } */
